# python-best-practices

./: .gitignore  README.md  _brand.yml  _quarto.yml  coding_standards.qmd  coding_style.qmd  factoring.qmd  index.qmd  manifest.json  patterns.qmd  project_structure.qmd  pyproject.toml  recommended_packages.qmd  recommended_software.qmd  requirements.txt
access-control/: index.qmd
change-control/: index.qmd
coding-standards/: coding-style.qmd  design-patterns.qmd  factoring.qmd  index.qmd  project-structure.qmd  recommended-packages.qmd  recommended-software.qmd
docs/: coding_standards.html  coding_style.html  factoring.html  index.html  patterns.html  project_structure.html  recommended_packages.html  recommended_software.html  search.json
docs/coding-standards/: coding-style.html  design-patterns.html  factoring.html  index.html  project-structure.html  recommended-packages.html  recommended-software.html
docs/documentation/: changelog.html  docstrings.html  index.html  markdown.html  process-scripts.html  projects.html  readme.html
docs/testing/: coded-tests.html  document-test-process.html  index.html  manual-tests.html  test-coverage.html  test-reports.html  validate-inputs.html
documentation/: changelog.qmd  docstrings.qmd  index.qmd  markdown.qmd  process-scripts.qmd  projects.qmd  readme.qmd
reproducibility/: audit-trail.qmd  index.qmd  input-data.qmd  package-management.qmd  software.qmd  version-control.qmd
testing/: coded-tests.qmd  document-test-process.qmd  index.qmd  manual-tests.qmd  test-coverage.qmd  test-reports.qmd  validate-inputs.qmd
(+1 files in other folders)
