[project]
name = "python-best-practices"
version = "0.1.0"
description = "Python Best Practices"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "plotly>=5.24.1",
    "quarto>=0.1.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "rsconnect>=1.28.2",
]

[[tool.uv.index]]
url = "https://pp-packagemanager.lloyds.net/PyPI/latest/simple"
default = true
